2014-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in [libdfp_c_tests]: Add -Wl,--no-as-needed to avoid tests
	not linking against libdfp.
	[libdfp_cxx_tests]: Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* NEWS: Update with version 1.0.10
	* README.developer: Add more documentation and update BID information.
	* README.maintainer: Likewise.
	* README.user: Likewise.
	* CONTRIBUTORS: Update.

	* include/libdfp-symbols.h: Add weak_alias for assembler code.

	* Makefile.in [C_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and
	-D_SVID_SOURCE and add -D_ISOC99_SOURCE.
	[CXX_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and add
	-D_ISOC99_SOURCE.
	* sysdeps/bid/symbol-hacks.h: BID symbol hacks to avoid internal PLT
	calls.
	* sysdeps/dpd/symbol-hacks.h: Fix symbol definitions.
	* sysdeps/soft-dfp/bid/numdigits.h (left_justifyd32): Fix to handle
	NaN.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* include/dfpacc.h: Add hidden_proto_enc for all symbols.
	* base-math/extendddtf.c: Add hidden_def.
	* base-math/extendsdtf.c: Likewise.
	* base-math/extendsfsd.c: Likewise.
	* base-math/extendsfsd.c: Likewise.
	* base-math/truncddsf.c: Likewise.
	* base-math/truncsdsf.c: Likewise.
	* base-math/trunctdsf.c: Likewise.
	* base-math/trunctfsd.c: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/adddd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/addsd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/addtd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/divdd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/divsd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/divtd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/eqdd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/eqsd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/eqtd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/extendddtd2.S: Likewise.