@@ -92,6 +92,13 @@ d32_type d32[] =
   {__LINE__, 0.0100000E-95DF, "+0010000e-101", "%s"},
   {__LINE__, 0.1000000E-95DF, "+0100000e-101", "%s"},
 
+  {__LINE__, 1E-95DF, "+1000000e-101", "%s"},
+  {__LINE__, 0.000001E-95DF, "+0000001e-101", "%s"},
+  {__LINE__, 0.000010E-96DF, "+0000001e-101", "%s"},
+  {__LINE__, 0.001000E-98DF, "+0000001e-101", "%s"},
+  {__LINE__, 0.010000E-99DF, "+0000001e-101", "%s"},
+  {__LINE__, 0.100000E-100DF, "+0000001e-101", "%s"},
+
   {__LINE__, 1.0000000E-95DF, "+1000000e-101", "%s"},
   {__LINE__, 10.0000000E-95DF, "+1000000e-100", "%s"},
   /* Notice 1000000e-101 is the answer.  */
@@ -117,6 +124,7 @@ d64_type d64[] =
   {__LINE__, 0.0000000000000001E-365DD, "+1000000000000000e-396", "%s"},
   {__LINE__, 0.0000000000000001E-366DD, "+1000000000000000e-397", "%s"},
 
+  /* __get_digits_d64 returns +0000000000000001e-398 for a NaN data. */
   {__LINE__, 0.0000100E-383DD, "+0000000000000001e-398", "%s"},
   {__LINE__, 0.0001000E-383DD, "+0000000000000001e-398", "%s"},
   {__LINE__, 0.0010000E-383DD, "+0000000000000001e-398", "%s"},
@@ -153,6 +161,15 @@ d128_type d128[] =
   {__LINE__, 0.0000000000000001E-365DL, "+1000000000000000000000000000000000e-414", "%s"},
   {__LINE__, 0.0000000000000001E-366DL, "+1000000000000000000000000000000000e-415", "%s"},
   {__LINE__, 0.0000000000000001E-367DL, "+1000000000000000000000000000000000e-416", "%s"},
+
+  {__LINE__, 1E-6143DL, "+1000000000000000000000000000000000e-6176", "%s"},
+  {__LINE__, 0.0000000000000001E-6127DL, "+1000000000000000000000000000000000e-6176", "%s"},
+  /* __get_digits_d128 returns +0000000000000000000000000000000001e-6176 for a NaN data. */
+  {__LINE__, 0.0000000000000001E-6140DL, "+0000000000000000000000000000000001e-6176", "%s"},
+  {__LINE__, 0.0000000000000100E-6143DL, "+0000000000000000000000000000000001e-6176", "%s"},
+  {__LINE__, 0.0000000000001000E-6143DL, "+0000000000000000000000000000000001e-6176", "%s"},
+  {__LINE__, 0.0000000000000001E-6143DL, "+0000000000000000000000000000000001e-6176", "%s"},
+  {__LINE__, 0.0000000000000001E-6160DL, "+0000000000000000000000000000000001e-6176", "%s"},
 };
 static const int d128_s = sizeof (d128) / sizeof (d128[0]);
 
@@ -231,5 +248,3 @@ int main (void)
   /* fail comes from scaffold.c  */
   return fail;
 }
-
-
