@@ -1,3 +1,11 @@
+2014-06-13  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>
+
+	* sysdeps/soft-dfp/dpd/numdigits.h (left_justifyd32): Fix to handle
+	NaN.
+	(left_justifyd64): Likewise.
+	(left_justifyd128): Likewise.
+	* tests/test-left_justify.c: Add tests to verify bit limits.
+
 2014-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	* Makefile.in [libdfp_c_tests]: Add -Wl,--no-as-needed to avoid tests
